# algorithm_template

./: .gitignore  AAPL_report.html  AMD_report.html  AMZN_report.html  DIS_report.html  JPM_report.html  MA_report.html  MSFT_report.html  NFLX_report.html  NVDA_report.html  ORCL_report.html  README.md  pyproject.toml  weekone.py  weekthree.py  weektwo.py
aws_course/: mac_os_ssh_connect_ec2.md
aws_services/: Readme.md
leedcodes/: weekthree.py  weektwo.py
leedcodes/backtracking/: n_quees.py  permute.py  phone_number.py  subset.py  subset_duplicate.py
leedcodes/bfs/: rotting_organge.py  walls_and_gates.py
leedcodes/dfs/: count_sub_islands.py  island_perimeter.py  pacificReacherble.py
leedcodes/heap/: concept.py  k_colsest_points_to_origin.py
leedcodes/stack/: min_stack.py
leedcodes/tries/: concept.py
leetcodes/advanced_graph/: alien_dictionary.py  chepest_flight_with_k_steps.py  coin_changes.py  construct_binary_tree_from_Inorder_and_ostorder_raversal.py  decode_ways.py  house_robber.py  min_cost_climbing_stairs.py  min_cost_to_connect_all_points.py  network_delay_time.py  network_delay_time_dijkstra.py  other_concept.py  palindromic_substrings.py  reconstruct_itinerary.py  redundant_connection.py  swim_in_rising_water.py
leetcodes/array_hashmap/: array_changes.py  contain_duplicate.py  contains_duplicate.py  count_and_say.py  detect_square.py  group_anagrams.py  is_anagram.cpp  is_anagram.py  min_deletion.py  next_permutation.py  search_in_rotated_sorted_array.py  simplify_path.py  spiral_matrix_2.py  valid_sudoku.py  zig_zag.py
(+255 files in other folders)
