[tool.poetry]
name = "algorithm_template"
authors = ["Francis <hungwei.francis@gmail.com>"]
description = ""
version = "0.1.0"
readme = "README.md"
packages = [{include = "server"}]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
uvicorn = "0.29.0"
fastapi = "^0.110.1"
motor = "^3.3.1"
numpy = { version = "^1.26.0", python ="^3.10,<3.13"}
prometheus-fastapi-instrumentator = "^6.1.0"
pandas = "2.1.4"
aiohttp = "^3.9.1"
ccxt = "^4.2.100"
apscheduler = "^3.10.4"
jupyter = "^1.0.0"
black = "^23.7.0"
isort = "^5.12.0"
ipykernel = "^6.29.4"
seaborn = "0.13.1"
statsmodels = "0.14.3"
plotnine = "0.13.6"
"scikit-misc" = "0.5.1"
tabulate = "0.9.0"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"